# Forschungsprojekt

./: .gitignore  README.md  main.py  main_experiment.py  pyproject.toml  quantize.py  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_evaluation.ipynb  02_visualization.ipynb  03-symmetric-quantization-int8.ipynb  03_evaluation_visualization .ipynb  03_old.ipynb  03_quantization_visualization .ipynb
results copy/csv/: quantization_results_POKEMON.csv
results copy/logs/: experiment_log.txt
results copy/quantized_models/: model_Affine_PTQ.pt  model_PoT_PTQ.pt  model_Symmetric_PTQ.pt
results/csv/: analysis_fake_quant_Affine.csv  analysis_fake_quant_PoT.csv  analysis_fake_quant_Symmetric.csv  quantization_results_CIFAR10.csv  quantization_results_MNIST.csv  quantization_results_POKEMON.csv  sensitivity_2025-12-12_12-35-50.csv  sensitivity_2025-12-12_15-59-39.csv  sensitivity_2025-12-12_16-05-19.csv  sensitivity_2025-12-12_17-31-24.csv  sensitivity_2025-12-15_12-42-35.csv  sensitivity_2025-12-17_12-33-01.csv  sensitivity_2025-12-17_12-39-43.csv  sensitivity_2025-12-17_12-56-25.csv  sensitivity_2025-12-17_12-57-59.csv  sensitivity_2025-12-17_12-58-41.csv  sensitivity_2025-12-17_12-59-42.csv  sensitivity_2025-12-17_13-00-49.csv  sensitivity_2025-12-17_13-03-20.csv  sensitivity_2025-12-17_13-13-16.csv  sensitivity_2025-12-17_13-45-39.csv  sensitivity_2025-12-17_13-53-29.csv  sensitivity_2025-12-17_14-02-38.csv  sensitivity_2025-12-17_14-12-08.csv  sensitivity_2026-01-07_15-51-35.csv  sensitivity_analysis.csv  weight_mse_2025-12-12_12-35-50.csv  weight_mse_2025-12-12_15-59-39.csv  weight_mse_2025-12-12_16-05-19.csv  weight_mse_2025-12-12_17-31-24.csv  weight_mse_2025-12-15_12-42-35.csv  weight_mse_2025-12-17_12-33-01.csv  weight_mse_2025-12-17_12-39-43.csv  weight_mse_2025-12-17_12-55-33.csv  weight_mse_2025-12-17_12-56-25.csv  weight_mse_2025-12-17_12-57-59.csv  weight_mse_2025-12-17_12-58-41.csv  weight_mse_2025-12-17_12-59-42.csv  weight_mse_2025-12-17_13-00-49.csv  weight_mse_2025-12-17_13-03-20.csv  (+6 more)
results/logs/: events.out.tfevents.1768232609.DomPC.141696.0  experiment_log.txt
results/models/: model_quantized_int8.pt
results/pokemon_results/: experiment_log.txt  model_Affine_PTQ.pt  model_PoT_PTQ.pt  model_Symmetric_PTQ.pt  quantization_results_POKEMON.csv
results/quantized_models/: cnn_mnist_quantized2025-12-12_16-05-19.pt  cnn_mnist_quantized2025-12-15_12-42-35.pt  custom_real_int_symmetric.pt  custom_symmetric_cpu_int8.pt  fake_model_Sym_INT8.pt  model_Aff_INT4.pt  model_Aff_INT8.pt  model_Aff_INT8_Dynamic.pt  model_Affine_PTQ.pt  model_Po2_INT4.pt  model_Po2_INT8.pt  model_PoT_PTQ.pt  (+3 more)
src/: config.py  custom_observer.py  evaluate_model.py  layers.py  logging_config.py  main.py  model.py  quantizer.py  train.py  utils.py
(+276 files in other folders)
