[project]
name = "researchproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # --- Jupyter & IDE ---
    "jupyterlab",
    "ipywidgets",

    # --- Data Science Basics ---
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "sympy",

    # --- Machine Learning (Pytorch) ---
    "torch",
    "torchvision",

    # --- Utilities ---
    "requests",
    "beautifulsoup4",
    "pillow",
    "arrow",
    "pyyaml",
]
[tool.uv]
index = [
    { name = "pytorch", url = "https://download.pytorch.org/whl/cu130", explicit = true },
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }