[project]
name = "researchproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # --- Jupyter & IDE ---
    "jupyterlab",
    "ipywidgets",
    # --- Data Science Basics ---
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "sympy",
    # --- Machine Learning (Pytorch) ---
    "torch",
    "torchvision",
    # --- Utilities ---
    "requests",
    "beautifulsoup4",
    "pillow",
    "arrow",
    "pyyaml",
    "tqdm>=4.67.1",
    "tensorboard>=2.20.0",
    "scikit-learn>=1.8.0",
    "torchsummary>=1.5.1",
]
[tool.uv]
index = [
    { name = "pytorch", url = "https://download.pytorch.org/whl/cu130", explicit = true },
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
