[project]
name = "researchproject"
version = "0.9.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # --- Jupyter & IDE ---
    "jupyterlab",
    "ipywidgets",
    # --- Data Science Basics ---
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "sympy",
    # --- Machine Learning (Pytorch) ---
    "torch",
    "torchvision",
    # --- Utilities ---
    "requests",
    "beautifulsoup4",
    "pillow",
    "arrow",
    "pyyaml",
    "tqdm>=4.67.1",
    "tensorboard>=2.20.0",
    "scikit-learn>=1.8.0",
    "torchsummary>=1.5.1",
    "ninja>=1.13.0",
    "collection>=0.1.6",
    "statistics>=1.0.3.5",
]
[tool.uv]
index = [
    { name = "pytorch", url = "https://download.pytorch.org/whl/cu130", explicit = true },
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
